majot chnages, remove local storage, pdf handeling

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
        "' Unnamed: 0                      _id                                        product_name        UPC  Calories  Total Fat (g)  Saturated Fat (g)  Trans Fat (g)  Cholesterol (mg)  Sodium (mg)  Total Carbohydrate (g)  Dietary Fiber (g)  Sugar (g)  Added Sugar (g)  Protein (g)  Calcium (mg)  Iron (mg)  Potassium (mg)  Vitamin D (mcg)  Folic Acid (mcg)  Niacin (%)  Phosphorus (%)  Thiamin (%)  Vitamin A (%)  Vitamin C (%)  Zinc (%)\\n          0 662c637247f1b0f494d8d1ec           Chips Ahoy! Chunky Chocolate Chip Cookies 4400003221       160            8.0                3.0              0                 0           75                      21                  1         11               11            1            10        1.4              50              0.0                 0         0.0               0         0.00              0              0         0\\n          1 662c652947f1b0f494d8d226           General Mills Cheerios Family Size Cereal 1600017003        70            1.5                0.0              0                 0          100                      15                  2          1                1            2            60        6.3             130              2.0                25        25.0              25        30.00             15             35        30\\n          2 66257e5d1201b108f1cf4459                              Product name not found 1600012593         0            0.0                0.0              0                 0            0                       0                  0          0                0            0             0        0.0               0              0.0                 0         0.0               0         0.00              0              0         0\\n          3 662d1d8047f1b0f494d8dfd9             Kroger® Deluxe Rocky Road Ice Cream Tub 1111050725       200            9.0                5.0              0                30           80                      26                  1         18               13            4           110        0.8             250              0.0                 0         0.0               0         0.00              0              0         0\\n          4 66253b571201b108f1cf216d                 Kroger® Garlic 3-Cheese Texas Toast 1111088632       150            9.0                2.5              0                 5          260                      14                  1          1                0            4            80        0.9              50              0.0                 0         0.0               0         0.00              0              0         0\\n          5 66257ed01201b108f1cf46d1                              Product name not found 1111060903         0            0.0                0.0              0                 0            0                       0                  0          0                0            0             0        0.0               0              0.0                 0         0.0               0         0.00              0              0         0\\n          6 662535df1201b108f1cf1f4c             Kroger® Purified Drinking Bottled Water 1111049213         0            0.0                0.0              0                 0            0                       0                  0          0                0            0             0        0.0               0              0.0                 0         0.0               0         0.00              0              0         0\\n          7 66254a591201b108f1cf2531 Mission® 100% Whole Wheat Soft Taco Flour Tortillas 7373107107       110            2.0                0.0              0                 0          380                      22                  5          1                0            4           110        0.8             130              0.0                 0         0.0               0         0.00              0              0         0\\n          8 662538931201b108f1cf2059                          Wonder Classic White Bread 7225001137       140            1.5                0.0              0                 0          180                      29                  3          5                5            5           480        1.9              70              3.7                60         2.6               0         0.46              0              0         0'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1455,7 @@
     "\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
-    "    \"Authorization\": f\"Bearer {OPENAI_API_KEY}\"\n",
+    "    \"Authorization\": f\"Bearer {'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'}\"\n",
     "}\n",
     "\n",
     "\n",
@@ -1487,16 +1487,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The grocery items in the list provide a mix of healthful and indulgent options. However, there are some areas of concern such as excessive saturated fat in the Chips Ahoy! cookies and lack of fiber in some items like the Kroger® Deluxe Rocky Road Ice Cream Tub. I recommend incorporating more fiber-rich whole grains and lean protein sources, and limiting intake of added sugars and saturated fats for a balanced and nutritious diet.'"
+       "<Response [200]>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The overall healthiness of the grocery items varies, with some items being high in added sugar and saturated fat. Specific recommendations include choosing lower sugar options and incorporating more sources of fiber and vitamins such as Vitamin C and Vitamin D. Items such as Chips Ahoy! Chunky Chocolate Chip Cookies and Kroger® Deluxe Rocky Road Ice Cream Tub should be consumed in moderation, while incorporating more whole foods like General Mills Cheerios Family Size Cereal and Mission® 100% Whole Wheat Soft Taco Flour Tortillas can improve overall nutritional intake. Consider swapping out high-fat items like Kroger® Deluxe Rocky Road Ice Cream Tub for lower-fat alternatives and looking for products with less added sugar.'"
+      ]
+     },
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
